src/react/main.css
/* ... */
#properties {
  position: absolute;
  height: 100%;
  width: 311px;
  background-color: #fff;
  right: -150;
  opacity: 0;
  z-index: 2;
  top: 0;
  padding-left: 20px;
  box-shadow: -4px 0px 40px rgba(26, 26, 73, 0);
  transition: all 0.25s cubic-bezier(0.05, 0.03, 0.35, 1);
}
#properties.expanded {
  right: 0 !important;
  opacity: 1 !important;
  z-index: 2;
  box-shadow: -4px 0px 40px rgba(26, 26, 73, 0.05);
}
#header2 {
  font-size: 20px;
  font-family: Roboto;
  font-weight: bold;
  color: #393c44;
  margin-top: 101px;
}
#close {
  margin-top: 100px;
  position: absolute;
  right: 20px;
  z-index: 9999;
  transition: all 0.25s cubic-bezier(0.05, 0.03, 0.35, 1);
}
#close:hover {
  cursor: pointer;
  opacity: 0.7;
}
#propswitch {
  border-bottom: 1px solid #e8e8ef;
  width: 331px;
  margin-top: 10px;
  margin-left: -20px;
  margin-bottom: 30px;
}
#dataprop {
  font-family: Roboto;
  font-weight: 500;
  font-size: 14px;
  text-align: center;
  color: #393c44;
  width: calc(88% / 3);
  height: 48px;
  line-height: 48px;
  display: inline-block;
  float: left;
  margin-left: 20px;
}
#dataprop:after {
  display: block;
  content: '';
  width: 100%;
  height: 4px;
  background-color: #217ce8;
  margin-top: -4px;
}
#alertprop {
  display: inline-block;
  font-family: Roboto;
  font-weight: 500;
  color: #808292;
  font-size: 14px;
  height: 48px;
  line-height: 48px;
  width: calc(88% / 3);
  text-align: center;
  float: left;
}
#logsprop {
  width: calc(88% / 3);
  display: inline-block;
  font-family: Roboto;
  font-weight: 500;
  color: #808292;
  font-size: 14px;
  height: 48px;
  line-height: 48px;
  text-align: center;
}
.inputlabel {
  font-family: Roboto;
  font-size: 14px;
  color: #253134;
}
.dropme {
  background-color: #fff;
  border-radius: 5px;
  border: 1px solid #e8e8ef;
  box-shadow: 0px 2px 8px rgba(34, 34, 87, 0.05);
  font-family: Roboto;
  font-size: 14px;
  color: #253134;
  text-indent: 20px;
  height: 40px;
  line-height: 40px;
  width: 287px;
  margin-bottom: 25px;
}
.dropme img {
  margin-top: 17px;
  float: right;
  margin-right: 15px;
}
.checkus {
  margin-bottom: 10px;
}
.checkus img {
  display: inline-block;
  vertical-align: middle;
}
.checkus p {
  display: inline-block;
  font-family: Roboto;
  font-size: 14px;
  vertical-align: middle;
  margin-left: 10px;
}
#divisionthing {
  height: 1px;
  width: 100%;
  background-color: #e8e8ef;
  position: absolute;
  right: 0;
  bottom: 80;
}
#removeblock {
  border-radius: 5px;
  position: absolute;
  bottom: 20;
  font-family: Roboto;
  font-size: 14px;
  text-align: center;
  width: 287px;
  height: 38px;
  line-height: 38px;
  color: #253134;
  border: 1px solid #e8e8ef;
  transition: all 0.3s cubic-bezier(0.05, 0.03, 0.35, 1);
}
#removeblock:hover {
  cursor: pointer;
  opacity: 0.5;
}
.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none; /* Safari */
  -khtml-user-select: none; /* Konqueror HTML */
  -moz-user-select: none; /* Old versions of Firefox */
  -ms-user-select: none; /* Internet Explorer/Edge */
  user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Opera and Firefox */
}
.blockyname {
  font-family: Roboto;
  font-weight: 500;
  color: #253134;
  display: inline-block;
  vertical-align: middle;
  margin-left: 8px;
  font-size: 16px;
}
.blockyleft img {
  display: inline-block;
  vertical-align: middle;
}
.blockyright {
  display: inline-block;
  float: right;
  vertical-align: middle;
  margin-right: 20px;
  margin-top: 10px;
  width: 28px;
  height: 28px;
  border-radius: 5px;
  text-align: center;
  background-color: #fff;
  transition: all 0.3s cubic-bezier(0.05, 0.03, 0.35, 1);
  z-index: 10;
}
.blockyright:hover {
  background-color: #f1f4fc;
  cursor: pointer;
}
.blockyright img {
  margin-top: 12px;
}
.blockyleft {
  display: inline-block;
  margin-left: 20px;
}
.blockydiv {
  width: 100%;
  height: 1px;
  background-color: #e9e9ef;
}
.blockyinfo {
  font-family: Roboto;
  font-size: 14px;
  color: #808292;
  margin-top: 15px;
  text-indent: 20px;
  margin-bottom: 20px;
}
.blockyinfo span {
  color: #253134;
  font-weight: 500;
  display: inline-block;
  border-bottom: 1px solid #d3dcea;
  line-height: 20px;
  text-indent: 0px;
}
.block {
  background-color: #fff;
  margin-top: 0px !important;
  box-shadow: 0px 4px 30px rgba(22, 33, 74, 0.05);
}
.selectedblock {
  border: 2px solid #217ce8;
  box-shadow: 0px 4px 30px rgba(22, 33, 74, 0.08);
}

@media only screen and (max-width: 832px) {
  #centerswitch {
    display: none;
  }
}
@media only screen and (max-width: 560px) {
  #names {
    display: none;
  }
}

